# ultraviolet

./: LICENSE  README.md  ultraviolet.h  utf.h
app/: build.bat  clean.bat  compat.bat  compat.cpp  test.bat  utf.c
app/templates/: convert.c  validate.c
samples/: README.md  english.txt  japanese.txt
testsuite/: .gitignore  CMakeLists.txt  clean.bat  clean.sh  run.bat  run.sh  utf.c
testsuite/samples/: README.md  blackletter.txt  chinese.txt  emoji.txt  french.txt  german.txt  russian.txt
testsuite/templates/: convert.c  validate.c
testsuite/utf/: convert.c  validate.c
ultraviolet/: utf.h
ultraviolet/utf/: simd.h  utf16.c  utf32.c  utf8.c
ultraviolet/utf/simd/: sse.h
ultraviolet/utf/utf16/: utf16.c  utf32.c  utf8.c
ultraviolet/utf/utf16/utf16/: simd.c  sse.c
ultraviolet/utf/utf16/utf32/: simd.c  sse.c
ultraviolet/utf/utf16/utf8/: simd.c  sse.c
ultraviolet/utf/utf32/: utf16.c  utf32.c  utf8.c
ultraviolet/utf/utf32/utf16/: simd.c  sse.c
ultraviolet/utf/utf32/utf32/: simd.c  sse.c
ultraviolet/utf/utf32/utf8/: simd.c  sse.c
ultraviolet/utf/utf8/: utf16.c  utf32.c  utf8.c
ultraviolet/utf/utf8/utf16/: simd.c  sse.c
ultraviolet/utf/utf8/utf32/: simd.c  sse.c
ultraviolet/utf/utf8/utf8/: simd.c
ultraviolet/utf/utf8/utf8/simd/: sse.c
utf/: intro.h  outro.h  simd.h  templates.h  utf.c  utf.h  utf16.c  utf32.c  utf8.c
utf/simd/: sse.h
utf/utf16/: bswap.c  length.c  utf16.c  utf16bswap.c  utf16to32.c  utf16to8.c  utf32.c  utf8.c
utf/utf16/bswap/: sse.c
utf/utf16/length/: sse.c
utf/utf16/utf16/: sse.c
utf/utf16/utf32/: sse.c
utf/utf16/utf8/: sse.c
utf/utf32/: bswap.c  length.c  utf16.c  utf32.c  utf32bswap.c  utf32to16.c  utf32to8.c  utf8.c
utf/utf32/bswap/: sse.c
utf/utf32/length/: sse.c
utf/utf32/utf16/: sse.c
utf/utf32/utf32/: sse.c
utf/utf32/utf8/: sse.c
utf/utf8/: length.c  utf16.c  utf32.c  utf8.c  utf8to16.c  utf8to32.c
utf/utf8/length/: sse.c
utf/utf8/utf16/: sse.c
utf/utf8/utf32/: sse.c
utf/utf8/utf8/: sse.c
